added partials for ewasteother and building properties

--- a/zwpa_app/app/views/walkthroughs/_form.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_form.html.erb
@@ -78,28 +78,7 @@
   
   <!-- FIELDSET -->
   <!-- Does your building have a.... -->
-  <fieldset>
-    <legend><h4>Does your building have a...</h4></legend>
-    <div class="field">
-      <label>Loading dock?</label><br>
-      <%#= f.number_field :loading_dock %>
-      <%= f.input :loading_dock, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
-    </div>
-    <div class="field">
-      <label>Freight elevators?</label><br>
-      <%#= f.number_field :freight_elevators %>
-      <%= f.input :freight_elevators, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
-    </div>
-    <div class="field">
-      <label>Ample storage space?</label><br>
-      <%#= f.number_field :storage_space %>
-      <%= f.input :storage_space, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
-    </div>
-    <div class="field">
-      <label>Storage details</label><br>
-      <%= f.text_area :storage_space_details %>
-    </div>
-  </fieldset>
+  <%= render 'does_your_building_have' %>
 
 
   <div class="field">
@@ -193,316 +172,12 @@
     <%= f.input :past_compost, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
 
-  <h4>E-Wastes</h4>
+  <%= render 'ewaste' %>
 
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label>Toner ink </label><br>
 
-    </div>
+  <%= render 'other_waste'%>
 
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_toner_ink, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
 
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_toner_ink, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> CFLs/Fluorescent tubes </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_CFLs, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_CFLs, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Batteries </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_batteries, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_batteries, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Computers, Peripherals </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_computers, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_computers, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Cell Phones </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_cellphones, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_cellphones, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> TV's </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_tvs, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_tvs, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Other Corded Equipment </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_other_corded_equipment, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_other_corded_equipment, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
- 
-
-
-  <!-- <div class="field">
-    <%= f.label :generate_toner_ink, label: "Toner ink" %><br>
-    <%#= f.number_field :generate_toner_ink %>
-    <%= f.input :generate_toner_ink, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_toner_ink %><br>
-    <%= f.number_field :recycle_toner_ink %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_CFLs %><br>
-    <%= f.number_field :generate_CFLs %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_CFLs %><br>
-    <%= f.number_field :recycle_CFLs %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_batteries %><br>
-    <%= f.number_field :generate_batteries %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_batteries %><br>
-    <%= f.number_field :recycle_batteries %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_computers %><br>
-    <%= f.number_field :generate_computers %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_computers %><br>
-    <%= f.number_field :recycle_computers %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_cellphones %><br>
-    <%= f.number_field :generate_cellphones %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_cellphones %><br>
-    <%= f.number_field :recycle_cellphones %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_tvs %><br>
-    <%= f.number_field :generate_tvs %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_tvs %><br>
-    <%= f.number_field :recycle_tvs %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_other_corded_equipment %><br>
-    <%= f.number_field :generate_other_corded_equipment %>
-  </div> -->
-
-
-  
-
-  <h4>Other Materials</h4>
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Furniture </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_furniture, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_furniture, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Linens / Uniforms </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_linens_uniforms, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_linens_uniforms, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Construction Debris </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_construction_debris , :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_construction_debris, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-
-  <div class="row">
-    <div class="small-12 medium-4 columns">
-      <label> Generate Pallets </label><br>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :generate_pallets, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you generate?' %>
-
-    </div>
-
-    <div class="small-12 medium-4 columns">
-      <%= f.input :recycle_pallets, :collection => [['Yes', 'Yes']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: 'Do you recycle?' %>
-
-    </div>
-
-
-  </div>
-
-
-  <!-- <div class="field">
-    <%= f.label :generate_furniture %><br>
-    <%= f.number_field :generate_furniture %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_furniture %><br>
-    <%= f.number_field :recycle_furniture %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_linens_uniforms %><br>
-    <%= f.number_field :generate_linens_uniforms %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_linens_uniforms %><br>
-    <%= f.number_field :recycle_linens_uniforms %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_construction_debris %><br>
-    <%= f.number_field :generate_construction_debris %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_construction_debris %><br>
-    <%= f.number_field :recycle_construction_debris %>
-  </div> -->
-  <!-- <div class="field">
-    <%= f.label :generate_pallets %><br>
-    <%= f.number_field :generate_pallets %>
-  </div>
-  <div class="field">
-    <%= f.label :recycle_pallets %><br>
-    <%= f.number_field :recycle_pallets %>
-  </div> -->
   <div class="field">
     <label>Does your company currently have a <strong>Zero Waste Policy<strong> in place?</label><br>
       <p>This would require 90% of overall diversion of landfill for non-hazardous wastes discarded materials are reused, recycled, composted, or recovered for productive use in nature or the economy at biological temperatures.</p>
