--- a/zwpa_app/app/views/home/_recent_requests.html.erb
+++ b/zwpa_app/app/views/home/_recent_requests.html.erb
@@ -7,6 +7,7 @@
 
   <% requests.each do |request| %>
     <tr>
+      <!-- How do I get the company name of request??? -->
       <td><%= link_to "COMPANY NAME HERE", request_path(request) %></td>
       <td><%= request.date%></td>
       
