removed recent documents list from home'

--- a/zwpa_app/app/views/home/index.html.erb
+++ b/zwpa_app/app/views/home/index.html.erb
@@ -12,17 +12,11 @@
 <div class="show-for-large-up large-5 columns">
 	<div class="row">
 		<div class="small-12 columns">
-			<h4>Recent Documents</h4>
+			<h4>Recent Audits</h4>
 		</div>
 
 	</div>
-	<div class="row">
-		<div class="small-12 columns">
-			<h4>Recent Clients</h4>
-		</div>
-
-
-	</div>
+	
 
 	
 
