--- a/zwpa_app/app/views/home/index.html.erb
+++ b/zwpa_app/app/views/home/index.html.erb
@@ -13,6 +13,7 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<h4>Recent Audits</h4>
+			<%= render :partial => "recent_audits", locals: { audits: @audits } %>
 		</div>
 
 	</div>
