--- a/zwpa_app/app/views/home/_recent_requests.html.erb
+++ b/zwpa_app/app/views/home/_recent_requests.html.erb
@@ -16,7 +16,9 @@
   <% end %>
 </table>
 
+<%= link_to "View All Requests", requests_path %>
+
 <!-- Add the pagination using will_paginate gem -->
-<span class="paginate">
-<%= will_paginate requests, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
-</span>
+<!-- <span class="paginate">
+<%#= will_paginate requests, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
+</span> -->
