--- a/zwpa_app/app/views/walkthroughs/new.html.erb
+++ b/zwpa_app/app/views/walkthroughs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New walkthrough</h1>
+<h1>Initial Questionnaire</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', walkthroughs_path %>
+<%= link_to 'Back', walkthroughs_path, :class => 'button' %>
