added company drop down

--- a/zwpa_app/app/views/requests/show.html.erb
+++ b/zwpa_app/app/views/requests/show.html.erb
@@ -52,22 +52,22 @@
 
 <p>
   <strong>Note:</strong>
-  <%= @request.Note %>
+  <%#= @request.Note %>
 </p>
 
 <p>
   <strong>Request:</strong>
-  <%= @request.request_id %>
+  <%#= @request.request_id %>
 </p>
 
 <p>
   <strong>Photo:</strong>
-  <%= @request.photo %>
+  <%#= @request.photo %>
 </p>
 
 <p>
   <strong>Description:</strong>
-  <%= @request.description %>
+  <%#= @request.description %>
 </p>
 
 <%= link_to 'Edit', edit_request_path(@request) %> |
