--- a/zwpa_app/app/views/requests/_form.html.erb
+++ b/zwpa_app/app/views/requests/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :customer_id %><br>
-    <%= f.number_field :customer_id %>
+    <%= f.collection_select :customer_id, Customer.alphabetical.all, :id, :company_name, prompt: "Select customer..." %>
   </div>
   <div class="field">
     <%= f.label :contact_firstname %><br>
@@ -51,22 +51,9 @@
     <%= f.label :date %><br>
     <%= f.date_select :date %>
   </div>
-  <div class="field">
-    <%= f.label :Note %><br>
-    <%= f.text_field :Note %>
-  </div>
-  <div class="field">
-    <%= f.label :request_id %><br>
-    <%= f.number_field :request_id %>
-  </div>
-  <div class="field">
-    <%= f.label :photo %><br>
-    <%= f.text_area :photo %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
+
+  <%#= render 'note_form' %>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
