--- a/zwpa_app/app/views/requests/index.html.erb
+++ b/zwpa_app/app/views/requests/index.html.erb
@@ -4,12 +4,12 @@
   <thead>
     <tr>
       <th>Customer</th>
-      <th>Contact firstname</th>
-      <th>Contact lastname</th>
+      <th>Contact First Name</th>
+      <th>Contact Last Name</th>
       <th>Title</th>
       <th>Email</th>
       <th>Phone</th>
-      <th>Street address</th>
+      <th>Street Address</th>
       <th>City</th>
       <th>State</th>
       <th>Date</th>
@@ -36,10 +36,7 @@
         <td><%= request.city %></td>
         <td><%= request.state %></td>
         <td><%= request.date %></td>
-        <td><%= request.Note %></td>
-        <td><%= request.request_id %></td>
-        <td><%= request.photo %></td>
-        <td><%= request.description %></td>
+        
         <td><%= link_to 'Show', request %></td>
         <td><%= link_to 'Edit', edit_request_path(request) %></td>
         <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
