--- a/zwpa_app/app/views/requests/new.html.erb
+++ b/zwpa_app/app/views/requests/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New request</h1>
+<h1>New Request</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', requests_path %>
+<%= link_to 'Back', requests_path, :class => 'button' %>
