--- a/zwpa_app/app/views/requests/index.html.erb
+++ b/zwpa_app/app/views/requests/index.html.erb
@@ -4,42 +4,37 @@
   <thead>
     <tr>
       <th>Customer</th>
-      <th>Contact First Name</th>
-      <th>Contact Last Name</th>
+      <th>Contact Name</th>
       <th>Title</th>
       <th>Email</th>
-      <th>Phone</th>
-      <th>Street Address</th>
-      <th>City</th>
-      <th>State</th>
+      <th>Phone Number</th>
+      <th>Address</th>
       <th>Date</th>
-      <th>Note</th>
+      <!-- <th>Note</th>
       <th>Request</th>
       <th>Photo</th>
-      <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Description</th> -->
+      <th>Show</th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
   <tbody>
     <% @requests.each do |request| %>
       <tr>
-        <td><%= request.customer_id %></td>
-        <td><%= request.contact_firstname %></td>
-        <td><%= request.contact_lastname %></td>
+        <!-- <td><%= request.customer_id %></td> -->
+        <td><%= link_to request.customer.company_name, request_path(request) %></td>
+        <td><%= request.contact_firstname+" "+request.contact_lastname %></td>
         <td><%= request.title %></td>
         <td><%= request.email %></td>
         <td><%= request.phone %></td>
-        <td><%= request.street_address %></td>
-        <td><%= request.city %></td>
-        <td><%= request.state %></td>
-        <td><%= request.date %></td>
+        <td><%= request.street_address+" "+request.city+", "+request.state %></td>
+        <td><%= request.date.strftime('%b %e, %Y') %></td>
         
         <td><%= link_to 'Show', request %></td>
         <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
