--- a/zwpa_app/app/views/walkthroughs/_form.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_form.html.erb
@@ -1,5 +1,5 @@
-<%#= form_for(@walkthrough) do |f| %>
-<%= simple_form_for(@walkthrough, html: { class: 'form-horizontal'}) do |f| %>
+<%= form_for(@walkthrough) do |f| %>
+<%#= simple_form_for(@walkthrough, html: { class: 'form-horizontal'}) do |f| %>
   <% if @walkthrough.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@walkthrough.errors.count, "error") %> prohibited this walkthrough from being saved:</h2>
@@ -15,10 +15,14 @@
   <!-- should populate automatically based on where you selected to add a new form, then the field itself can just stay hidden. -->
   <!-- for MVP, just give user a dropdown of requests -->
   <div class="field">
-    <%= f.input :request_id, collection: Request.chronological, prompt:"Select request" %>
+    <%#= f.input :request_id, collection: Request.chronological, prompt:"Select request" %>
+    <%= f.collection_select :request_id, Request.chronological.all, :id, :id, prompt: "Select customer..." %>
   </div>
 
-  <%= f.input :created_at, as: :date, order: [:month, :day, :year], start_year: Date.today.year - 1, end_year: Date.today.year + 1, label: 'Date of Walkthrough' %>
+  <%#= f.input :created_at, as: :date, order: [:month, :day, :year], start_year: Date.today.year - 1, end_year: Date.today.year + 1, label: 'Date of Walkthrough' %>
+
+  <label> "Date of Walkthrough" </label>><br>
+    <%= f.date_select :created_at %>
 
   <!-- Need a date entry space use simple form gem for this -->
   <!-- https://github.com/plataformatec/simple_form -->
@@ -52,7 +56,15 @@
   </div>
   <div class="field">
     <label>Are there other spaces/businesses (Leased or Owned/Operated) in the building?</label><br>
-    <%= f.input :other_businesses, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+    
+      <%= f.radio_button :other_businesses, 'Yes', :checked => false %> 
+      <%= label :other_businesses, 'Yes' %>
+      <%= f.radio_button :other_businesses, 'No' %>
+      <%= label :other_businesses, 'No' %>
+      <%= f.radio_button :other_businesses, 'DK' %>
+      <%= label :other_businesses, 'DK' %>
+
+    <%#= f.input :other_businesses, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
     
   </div>
   <div class="field">
@@ -62,17 +74,37 @@
   <div class="field">
     <label>Is your building owned or leased?</label><br>
     <%#= f.number_field :ownership %>
-    <%= f.input :ownership, :collection => [['Own', 'Owned'], ['Lease', 'Leased']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :ownership, 'Own', :checked => false %> 
+      <%= label :other_businesses, 'Owned' %>
+      <%= f.radio_button :ownership, 'Lease', :checked => false %> 
+      <%= label :other_businesses, 'Leased' %>
+
+
+
+    <%#= f.input :ownership, :collection => [['Own', 'Owned'], ['Lease', 'Leased']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <label>If leased, does the leasing agent control the solid waste/recycling disposal contract?</label><br>
     <%#= f.number_field :waste_disposal_contract %>
-    <%= f.input :waste_disposal_contract, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :waste_disposal_contract, 'Yes', :checked => false %> 
+      <%= label :waste_disposal_contract, 'Yes' %>
+      <%= f.radio_button :waste_disposal_contract, 'No' %>
+      <%= label :waste_disposal_contract, 'No' %>
+      <%= f.radio_button :waste_disposal_contract, 'DK' %>
+      <%= label :waste_disposal_contract, 'DK' %>
+
+    <%#= f.input :waste_disposal_contract, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <label>If leased, are waste management costs included in the rent payment?</label><br>
     <%#= f.number_field :waste_management_cost %>
-    <%= f.input :waste_management_cost, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :waste_management_cost, 'Yes', :checked => false %> 
+      <%= label :waste_management_cost, 'Yes' %>
+      <%= f.radio_button :waste_management_cost, 'No' %>
+      <%= label :waste_management_cost, 'No' %>
+      <%= f.radio_button :waste_management_cost, 'DK' %>
+      <%= label :waste_management_cost, 'DK' %>
+    <%#= f.input :waste_management_cost, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   
   <!-- FIELDSET -->
@@ -88,17 +120,36 @@
   <div class="field">
     <label>Do you have a contract with them?</label><br>
     <%#= f.number_field :trash_hauler_contract %>
-    <%= f.input :trash_hauler_contract, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :trash_hauler_contract, 'Yes', :checked => false %> 
+      <%= label :trash_hauler_contract, 'Yes' %>
+      <%= f.radio_button :trash_hauler_contract, 'No' %>
+      <%= label :trash_hauler_contract, 'No' %>
+      <%= f.radio_button :trash_hauler_contract, 'DK' %>
+      <%= label :trash_hauler_contract, 'DK' %>
+    <%#= f.input :trash_hauler_contract, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
 
   <div class="field">
     <label>If yes, is a copy available? </label><br>
-    <%= f.input :contract_available, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :contract_available, 'Yes', :checked => false %> 
+      <%= label :contract_available, 'Yes' %>
+      <%= f.radio_button :contract_available, 'No' %>
+      <%= label :contract_available, 'No' %>
+      <%= f.radio_button :contract_available, 'DK' %>
+      <%= label :contract_available, 'DK' %>
+    <%#= f.input :contract_available, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
 
   <div class="field">
     <label>Do you have at least one year's records of solid waste and/or recycling volumes?</label><br>
-    <%= f.input :annual_record, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+
+      <%= f.radio_button :annual_record, 'Yes', :checked => false %> 
+      <%= label :annual_record, 'Yes' %>
+      <%= f.radio_button :annual_record, 'No' %>
+      <%= label :annual_record, 'No' %>
+      <%= f.radio_button :annual_record, 'DK' %>
+      <%= label :annual_record, 'DK' %>
+    <%#= f.input :annual_record, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
 
   <div class="field">
@@ -110,12 +161,26 @@
     <label>What solid waste containers do you use?</label><br>
     <label>Dumpster, Roll-off, Toter, Other...</label>
     <%#= f.text_field :waste_containers %>
-    <%= f.input :waste_containers, :collection => [['Dumpster', 'Dumpster'],['Roll-off', 'Roll-off'], ['Toter', 'Toter'], ['Other', 'Other']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: '' %>
+      <%= f.radio_button :waste_containers, 'Dumpster', :checked => false %> 
+      <%= label :waste_containers, 'Dumpster' %>
+      <%= f.radio_button :waste_containers, 'Roll-off' %>
+      <%= label :waste_containers, 'Roll-off' %>
+      <%= f.radio_button :waste_containers, 'Toter' %>
+      <%= label :waste_containers, 'Toter' %>
+      <%= f.radio_button :waste_containers, 'Other' %>
+      <%= label :waste_containers, 'Other' %>
+    <%#= f.input :waste_containers, :collection => [['Dumpster', 'Dumpster'],['Roll-off', 'Roll-off'], ['Toter', 'Toter'], ['Other', 'Other']], :label_method => :last, :value_method => :first, :as => :check_boxes, label: '' %>
   </div>
   <div class="field">
     <label>Does your company have a <strong>'Buy Recycled'</strong> policy re: recyclability or recycled content of products?<br>
     <%#= f.number_field :buy_recycled %>
-    <%= f.input :buy_recycled, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :buy_recycled, 'Yes', :checked => false %> 
+      <%= label :buy_recycled, 'Yes' %>
+      <%= f.radio_button :buy_recycled, 'No' %>
+      <%= label :buy_recycled, 'No' %>
+      <%= f.radio_button :buy_recycled, 'DK' %>
+      <%= label :buy_recycled, 'DK' %>
+    <%#= f.input :buy_recycled, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <%= f.label "If yes, please describe" %><br>
@@ -124,7 +189,13 @@
   <div class="field">
     <label>Does your company have a policy of purchasing non-toxic/'Green' cleaning products?</label><br>
     <%#= f.number_field :green_cleaning_products %>
-    <%= f.input :green_cleaning_products, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :green_cleaning_products, 'Yes', :checked => false %> 
+      <%= label :green_cleaning_products, 'Yes' %>
+      <%= f.radio_button :green_cleaning_products, 'No' %>
+      <%= label :green_cleaning_products, 'No' %>
+      <%= f.radio_button :green_cleaning_products, 'DK' %>
+      <%= label :green_cleaning_products, 'DK' %>
+    <%#= f.input :green_cleaning_products, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <%= f.label "If yes, please describe" %><br>
@@ -133,12 +204,24 @@
   <div class="field">
     <label>Is your building located in a recycling mandated community?</label><br>
     <%#= f.number_field :mandated_recycling %>
-    <%= f.input :mandated_recycling, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :mandated_recycling, 'Yes', :checked => false %> 
+      <%= label :mandated_recycling, 'Yes' %>
+      <%= f.radio_button :mandated_recycling, 'No' %>
+      <%= label :mandated_recycling, 'No' %>
+      <%= f.radio_button :mandated_recycling, 'DK' %>
+      <%= label :mandated_recycling, 'DK' %>
+    <%#= f.input :mandated_recycling, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <label>Does your building currently have a <strong> recycling program </strong> ?</label><br>
     <%#= f.number_field :recycling_program %>
-    <%= f.input :recycling_program, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :recycling_program, 'Yes', :checked => false %> 
+      <%= label :recycling_program, 'Yes' %>
+      <%= f.radio_button :recycling_program, 'No' %>
+      <%= label :recycling_program, 'No' %>
+      <%= f.radio_button :recycling_program, 'DK' %>
+      <%= label :recycling_program, 'DK' %>
+    <%#= f.input :recycling_program, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
 
   <!-- Put the example in the text area itself!!! -->
@@ -150,7 +233,13 @@
   <div class="field">
     <label>Does your building currently utilize a duel-stream or single-stream recycling program in your building?</label><br>
     <%#= f.number_field :recycling_stream %>
-    <%= f.input :recycling_stream, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :recycling_stream, 'Yes', :checked => false %> 
+      <%= label :recycling_stream, 'Yes' %>
+      <%= f.radio_button :recycling_stream, 'No' %>
+      <%= label :recycling_stream, 'No' %>
+      <%= f.radio_button :recycling_stream, 'DK' %>
+      <%= label :recycling_stream, 'DK' %>
+    <%#= f.input :recycling_stream, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <label> Recycling stream details</label><br>
@@ -163,12 +252,24 @@
   <div class="field">
     <label>Does your company currently compost organic materials such as food waste/yard waste? </label><br>
     <%#= f.number_field :current_compost %>
-    <%= f.input :current_compost, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :current_compost, 'Yes', :checked => false %> 
+      <%= label :current_compost, 'Yes' %>
+      <%= f.radio_button :current_compost, 'No' %>
+      <%= label :current_compost, 'No' %>
+      <%= f.radio_button :current_compost, 'DK' %>
+      <%= label :current_compost, 'DK' %>
+    <%#= f.input :current_compost, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <label>Has your organization composted organic material in the past?</label><br>
     <%#= f.number_field :past_compost %>
-    <%= f.input :past_compost, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :past_compost, 'Yes', :checked => false %> 
+      <%= label :past_compost, 'Yes' %>
+      <%= f.radio_button :past_compost, 'No' %>
+      <%= label :past_compost, 'No' %>
+      <%= f.radio_button :past_compost, 'DK' %>
+      <%= label :past_compost, 'DK' %>
+    <%#= f.input :past_compost, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
 
   <%= render 'ewaste' %>
@@ -181,22 +282,47 @@
     <label>Does your company currently have a <strong>Zero Waste Policy<strong> in place?</label><br>
       <p>This would require 90% of overall diversion of landfill for non-hazardous wastes discarded materials are reused, recycled, composted, or recovered for productive use in nature or the economy at biological temperatures.</p>
     <%#= f.number_field :ZW_policy %>
-    <%= f.input :ZW_policy, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :ZW_policy, 'Yes', :checked => false %> 
+      <%= label :ZW_policy, 'Yes' %>
+      <%= f.radio_button :ZW_policy, 'No' %>
+      <%= label :ZW_policy, 'No' %>
+      <%= f.radio_button :ZW_policy, 'DK' %>
+      <%= label :ZW_policy, 'DK' %>
+    <%#= f.input :ZW_policy, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <label> Is your building/organization LEED certified? </label><br>
     <%#= f.number_field :LEED %>
-    <%= f.input :LEED, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :LEED, 'Yes', :checked => false %> 
+      <%= label :LEED, 'Yes' %>
+      <%= f.radio_button :LEED, 'No' %>
+      <%= label :LEED, 'No' %>
+      <%= f.radio_button :LEED, 'DK' %>
+      <%= label :LEED, 'DK' %>
+    <%#= f.input :LEED, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
     <label>If so, is your buiding/organization looking to recertify your LEED building? </label><br>
     <%#= f.number_field :recertify_LEED %>
-    <%= f.input :recertify_LEED, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+      <%= f.radio_button :recertify_LEED, 'Yes', :checked => false %> 
+      <%= label :recertify_LEED, 'Yes' %>
+      <%= f.radio_button :recertify_LEED, 'No' %>
+      <%= label :recertify_LEED, 'No' %>
+      <%= f.radio_button :recertify_LEED, 'DK' %>
+      <%= label :recertify_LEED, 'DK' %>
+    <%#= f.input :recertify_LEED, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="field">
+
     <label> Is your buiding requesting PRC for waste audit services? </label><br>
+      <%= f.radio_button :requesting_audit_services, 'Yes', :checked => false %> 
+      <%= label :requesting_audit_services, 'Yes' %>
+      <%= f.radio_button :requesting_audit_services, 'No' %>
+      <%= label :requesting_audit_services, 'No' %>
+      <%= f.radio_button :requesting_audit_services, 'DK' %>
+      <%= label :requesting_audit_services, 'DK' %>
     <%#= f.number_field :requesting_audit_services %>
-    <%= f.input :requesting_audit_services, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+    <%#= f.input :requesting_audit_services, :collection => [['Yes', 'Yes'], ['No', 'No'], ['DK', 'DK']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
   </div>
   <div class="actions">
     <%= f.submit "Save", class: 'button'%>
