walkthroughs can now be created from the requests show page without any additional action from the user. the walkthrough show page also shows customer

--- a/zwpa_app/app/views/walkthroughs/_form.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_form.html.erb
@@ -4,8 +4,7 @@
 
 
   <div class="field">
-      <%= f.label :request_id %><br>
-      <%= f.collection_select :request_id, Request.chronological.all, :id, :id, prompt: "Select customer..." %>
+      <%= f.hidden_field :request_id %><br>
     </div>
 
   <label> Date of Walkthrough </label><br>
