--- a/zwpa_app/app/views/walkthroughs/show.html.erb
+++ b/zwpa_app/app/views/walkthroughs/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Request:</strong>
-  <%= @walkthrough.request_id %>
+  <strong>Company:</strong>
+  <%= @walkthrough.request.customer.company_name %>
 </p>
 
 <p>
