--- a/zwpa_app/app/views/walkthroughs/show.html.erb
+++ b/zwpa_app/app/views/walkthroughs/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Company:</strong>
+  <strong>Customer:</strong>
   <%= @walkthrough.request.customer.company_name %>
 </p>
 
