added link on walkthrough show page back to associated request

--- a/zwpa_app/app/views/walkthroughs/show.html.erb
+++ b/zwpa_app/app/views/walkthroughs/show.html.erb
@@ -286,4 +286,5 @@
 </p>
 
 <%= link_to 'Edit', edit_walkthrough_path(@walkthrough) %> |
+<%= link_to 'Back to Request', request_path(@walkthrough.request) %> |
 <%= link_to 'Back', walkthroughs_path %>
