--- a/zwpa_app/app/views/walkthroughs/new.html.erb
+++ b/zwpa_app/app/views/walkthroughs/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', walkthroughs_path, class: 'button' %>
+<%= link_to 'Back', walkthroughs_path, class: 'button' %> |
+<%= link_to 'Back to Request', request_path(@walkthrough.request), class: 'button' %>
