--- a/zwpa_app/app/views/walkthroughs/show.html.erb
+++ b/zwpa_app/app/views/walkthroughs/show.html.erb
@@ -285,6 +285,6 @@
   <%= @walkthrough.requesting_audit_services %>
 </p>
 
-<%= link_to 'Edit', edit_walkthrough_path(@walkthrough) %> |
-<%= link_to 'Back to Request', request_path(@walkthrough.request) %> |
-<%= link_to 'Back', walkthroughs_path %>
+<%= link_to 'Edit', edit_walkthrough_path(@walkthrough), class: 'button' %> |
+<%= link_to 'Back to Request', request_path(@walkthrough.request), class: 'button' %> |
+<%= link_to 'Back', walkthroughs_path, class: 'button' %>
