--- a/zwpa_app/app/views/walkthroughs/_form.html.erb
+++ b/zwpa_app/app/views/walkthroughs/_form.html.erb
@@ -78,13 +78,20 @@
 
   </div>
 
-
-  
-  
-    <div class="field">
-      <label>Is your building owned or leased?</label><br>
-      <%= f.input :ownership, :collection => [['Own', 'Owned'], ['Lease', 'Leased']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+  <div class="row field">
+    <div class="small-12 medium-4 columns">
+      <label>Is your building...</label>
     </div>
+
+    <div class="small-12 medium-4 columns">
+      <%= f.input :ownership, :collection => [['Own', 'Owned']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+    </div>
+
+     <div class="small-12 medium-4 columns">
+      <%= f.input :ownership, :collection => [['Lease', 'Leased']], :label_method => :last, :value_method => :first, :as => :radio_buttons, label: '' %>
+     </div>
+
+  </div>
 
     <div class="field">
       <label>If leased, does the leasing agent control the solid waste/recycling disposal contract?</label><br>
